[fix]form width on small devices

--- a/css/book.css
+++ b/css/book.css
@@ -1,8 +1,8 @@
 #regForm {
   background-color: #ffffff;
-  margin: 100px auto;
+  margin: 10px auto;
   padding: 40px;
-  width: 70%;
+  width: 50%;
   min-width: 300px;
 }
 
@@ -46,4 +46,14 @@ input.invalid {
 /* Mark the steps that are finished and valid: */
 .step.finish {
   background-color: #0269a9;
+}
+
+@media only screen and (max-width: 1150px) {
+  #regForm {
+    background-color: #ffffff;
+    margin: 10px auto;
+    padding: 40px;
+    width: 100%;
+    min-width: 300px;
+  }
 }
